--- a/tira/docker/tira_nginx.conf
+++ b/tira/docker/tira_nginx.conf
@@ -19,16 +19,16 @@ server {
 
     # Django media
     location /media  {
-        alias /path/to/your/mysite/media;  # your Django project's media files - amend as required
+        alias /tira/tira/media;  # your Django project's media files - amend as required
     }
 
     location /static {
-        alias /path/to/your/mysite/static; # your Django project's static files - amend as required
+        alias /tira/tira/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /path/to/your/mysite/uwsgi_params; # the uwsgi_params file you installed
+        include     /tira/tira/suwsgi_params; # the uwsgi_params file you installed
     }
 }
