--- a/tira/docker/Dockerfile
+++ b/tira/docker/Dockerfile
@@ -2,9 +2,11 @@ FROM django:latest
 
 MAINTAINER Samuel Kurath <skurath@hsr.ch>
 
+EXPOSE 8000
+
 RUN apt-get update \
-&& apt-get install -y nginx python-pip python-dev \
-&& export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.9.0-cp34-cp34m-linux_x86_64.whl git vim \
+&& apt-get install -y nginx python-pip python-dev git vim \
+&& export TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.9.0-cp34-cp34m-linux_x86_64.whl \
 && pip install --upgrade pip \
 && pip3 install --upgrade $TF_BINARY_URL \
 && pip install uwsgi \
@@ -12,5 +14,6 @@ RUN apt-get update \
 && git clone https://github.com/Murthy10/tira.git \
 && ln -s /tira/tira/docker/mysite_nginx.conf /etc/nginx/sites-enabled/ \
 && cd /tira/ \
-&& python manage.py collectstatic \
+&& echo 'yes' | python manage.py collectstatic
+
 
