--- a/tira/docker/tira_nginx.conf
+++ b/tira/docker/tira_nginx.conf
@@ -1,4 +1,4 @@
-# mysite_nginx.conf
+# tira_nginx.conf
 
 # the upstream component nginx needs to connect to
 upstream django {
@@ -23,12 +23,12 @@ server {
     }
 
     location /static {
-        alias /tira/tira/static; # your Django project's static files - amend as required
+        alias /tira/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /tira/tira/suwsgi_params; # the uwsgi_params file you installed
+        include     /tira/tira/uwsgi_params; # the uwsgi_params file you installed
     }
 }
