--- a/tira/docker/tira_uwsgi.ini
+++ b/tira/docker/tira_uwsgi.ini
@@ -16,6 +16,6 @@ processes       = 10
 # the socket (use the full path to be safe
 socket          = /tira/tira.sock
 # ... with appropriate permissions - may be needed
-# chmod-socket    = 664
+chmod-socket    = 666
 # clear environment on exit
 vacuum          = trued
